# forexrates

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: actions.yml  flake8-linting.yml  pypi-publish.yml  python-publish.yml  scheduler.yml  update-forex-data.yml
config/: logging.yaml
examples/: ExchangeRatesIO CRUD Operations.ipynb
forexrates/: __init__.py
forexrates/api/: __init__.py  base.py  exchangerates.py
forexrates/io/: __init__.py  base.py  dataframe.py
main/: config.py  erapi.py  utils.py
