[build-system]
requires = [
    "numpy==2.4.2",
    "pandas==3.0.0",
    "requests==2.32.5",
    "setuptools==82.0.0",
    "tqdm==4.67.3",
    "wheel==0.46.3",
]
build-backend = "setuptools.build_meta"

[project]
name = "forexrates"
dynamic = ["version"]
authors = [
  { name = "shark-utilities developers", email = "neuralNOD@outlook.com" }
]
description = "A unified codebase for fetching FOREX rates."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = {file = "LICENSE" }
keywords = [
    "forex", "api", "exchange rates", "foreign exchange rates",
    "wrappers", "data science", "data analysis", "data scientist", "data analyst"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy==2.4.2",
    "pandas==3.0.0",
    "requests==2.32.5",
    "tqdm==4.67.3",
]

[project.urls]
"Homepage" = "https://github.com/sharkutilities/forexrates"
"Issue Tracker" = "https://github.com/sharkutilities/forexrates/issues"
"Org. Homepage" = "https://github.com/sharkutilities"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.setuptools.dynamic]
version = {attr = "forexrates.__version__"}
